# dxd-rating-system

./: .env.example  AGENTS.md  README.md  TODO.md  docker-compose.yml  lint.sh  migrate.sh  pyproject.toml  test.sh
alembic/: env.py
alembic/versions/: 0360ead067b8_add_queue_class_id_to_match_queue_.py  05d7cc39fdf0_add_presence_thread_channel_id_to_match_.py  070d1ff03326_create_match_queue_entries_table.py  0ed16e7622d7_create_squashed_initial_schema.py  0f5f5f2f0d61_sync_outbox_event_type_constraint_for_queue_joined.py  129c5d3ac194_recreate_schema_from_current_models_.py  16d5f8ac96ff_add_info_thread_binding.py  1bf8e60c0cc3_create_player_table.py  1d629212dd60_recreate_schema_from_current_models_.py  23822cf317b8_add_match_spectators.py  244aeb05414b_add_outbox_discarded_at.py  288f167ce5a3_create_initial_schema.py  30c9cccc8a3a_create_initial_schema.py  3273ba9b6be1_add_match_formats_and_player_format_.py  36e1433ee194_initial_commit.py  4941e9b35bcb_add_player_access_restrictions.py  4b3d4f8d0a3c_add_notification_context_to_match_queue_entries.py  6dd52eaf4e31_recreate_initial_schema_with_season_.py  7015567383d7_add_rating_tracking_columns.py  8b5f30ff8718_update.py  9afb06a405d7_make_notification_mention_discord_user_.py  9f9398a38f38_initial_commit.py  a5d3c328f06b_add_queue_joined_outbox_event.py  a8929a7cb0b0_update.py  ad6d2d0e0d2b_create_matches_and_outbox_tables.py  b064519eb7d1_recreate_initial_schema.py  b0f7c1d3a9e2_add_retry_state_to_outbox_events.py  b148b23ad678_implement_match_flow_management.py  (+10 more)
docs/: README.md  discord_permissions.md  formats.md  match.md  match_class.md  match_result_correction.md  match_spectating.md  matching_queue.md  outbox.md  rating.md  seasons.md
railway/: bot.json  daily.json
tests/: conftest.py
(+220 files in other folders)
